Finished new footer

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -53,21 +53,6 @@
                 <a href="/products/fashion">View All</a>
                 <div id="advert-item-3" class="advert-item"></div>
             </div>
-            {{!-- <div class="col s12 l4 m6 advert-item">
-                <h5>Electronics</h5>
-                <a href="/products/phonesAndElectronics">View All</a><br>
-                <span class="mdi mdi-tablet-cellphone"></span>
-            </div>
-            <div class="col s12 l4 m6 advert-item">
-                <h5>Books</h5>
-                <a href="/products/books">View All</a><br>
-                <span class="mdi mdi-book-open-page-variant"></span>
-            </div>
-            <div class="col s12 l4 m6 advert-item">
-                <h5>Fashion</h5>
-                <a href="/products/fashion">View All</a><br>
-                <span class="mdi mdi-watch"></span>
-            </div> --}}
         </div>
         <div>
             <h5 class="sub-header">Featured Products</h5>
@@ -104,16 +89,8 @@
                 </div>
             </div>
         </div>
-        {{!-- <div class="parallax-container valign-wrapper">
-            <div class="section no-pad-bot">
-                <div class="container">
-                    <div class="row center">
-                        <h5 class="header col s12 light parallax-header">Our Philosopyh</h5>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda odit nulla itaque odio voluptas, dolor libero nemo? Quae, temporibus ea.</p>
-                    </div>
-                </div>
-            </div>
-            <div id="parallax1" class="parallax"><img class="responsive-img" src="/img/slide5.jpg" alt="Unsplashed background img 2"></div>
+        {{!-- <div id="discount">
+            
         </div> --}}
         <div class="scrollspy" id="about">
             <h5 class="sub-header">About Zubis Mart</h5>
