--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -2,12 +2,11 @@
     <div class="section">
         <div class="row">
             <div class="col s12 m6 l3">
-                <h5>Stuff We Do</h5>
+                <h5>Contact</h5>
                 <ul class="footer-link-list">
-                    <li>Online Sales</li>
-                    <li>Professional Services</li>
-                    <li>Advert Placement</li>
-                    <li>Lorem, ipsum.</li>
+                    <li>Business Address should go here</li>
+                    <li>09026425337</li>
+                    <li>contact@zubismart.com</li>
                 </ul>
             </div>
             <div class="col s12 m6 l3">
@@ -19,54 +18,34 @@
                 </ul>
             </div>
             <div class="col s12 m6 l3">
+                <h5>Stuff We Do</h5>
+                <ul class="footer-link-list">
+                    <li>Online Sales</li>
+                    <li>Professional Services</li>
+                    <li>Advert Placement</li>
+                    <li>Lorem, ipsum.</li>
+                </ul>
+            </div>
+            <div class="col s12 m6 l3">
                 <h5>About</h5>
                 <ul class="footer-link-list">
                     <li><a href="#">Our Story</a></li>
                     <li><a href="#">Maybe Something Else</a></li>
                 </ul>
             </div>
-            <div class="col s12 m6 l3">
-                <h5>Contact</h5>
-                <ul class="footer-link-list">
-                    <li>Business Address should go here</li>
-                    <li>09026425337</li>
-                    <li>contact@zubismart.com</li>
-                </ul>
-            </div>
         </div>
     </div>
     <div class="footer-copyright">
-        <div class="row container">
-            <div class="col s12 m6 l6">
-                <p>&copy; 2018 Copyright Zubis Mart</p>
-            </div>
-            <div class="col s12 m6 l6">
-                <ul id="footerLink">
-                    <li class="footerLinks"><a href="#!"><i class="mdi mdi-facebook"></i></a></li>
-                    <li class="footerLinks"><a href="#!"><i class="mdi mdi-twitter"></i></a></li>
-                    <li class="footerLinks"><a href="#!"><i class="mdi mdi-instagram"></i></a></li>
-                </ul>
-            </div>
+        <div id="left">
+            <p style="color: #a2a2a2">&copy; 2018 Copyright Zubis Mart - Developed by Barman</p>
+        </div>
+        <div id="right">
+            <h5>Connect</h5>
+            <ul id="footerLink">
+                <li class="footerLinks"><a href="#!"><i class="mdi mdi-facebook"></i></a></li>
+                <li class="footerLinks"><a href="#!"><i class="mdi mdi-twitter"></i></a></li>
+                <li class="footerLinks"><a href="#!"><i class="mdi mdi-instagram"></i></a></li>
+            </ul>
         </div>
     </div>
 </footer>
-{{!-- <footer class="page-footer">
-    <div class="container">
-        <div class="row">
-            <div class="col s12 center">
-                <h5>Wanna Connect?</h5>
-                <p><a href="#">Contact Us!</a></p>
-                <ul id="footerLink">
-                    <li class="footerLinks"><a href="#!"><i class="mdi mdi-facebook"></i></a></li>
-                    <li class="footerLinks"><a href="#!"><i class="mdi mdi-twitter"></i></a></li>
-                    <li class="footerLinks"><a href="#!"><i class="mdi mdi-instagram"></i></a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div class="footer-copyright">
-        <div class="container">
-            <p>&copy; 2018 Copyright Zubis Mart</p>
-        </div>
-    </div>
-</footer> --}}
