--- a/public/css/index.css
+++ b/public/css/index.css
@@ -118,6 +118,12 @@ body {
     top: 40%;
 }
 
+/* #discount {
+    width: 100%;
+    height: 100px;
+    background: radial-gradient(#039be5);
+} */
+
 #about {
     background-color: #fff;
     box-shadow: 5px 2px 5px #c5c5c5;
