--- a/public/css/style.css
+++ b/public/css/style.css
@@ -293,7 +293,7 @@ form .progress {
 .page-footer {
     padding-left: 1rem;
     padding-right: 1rem;
-    font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: -apple-system, 'Roboto' BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: #3d383e;
 }
 
@@ -307,55 +307,30 @@ form .progress {
 }
 
 .footerLinks a {
-    color: #a7b018;
+    color: #a2a2a2;
     text-align: center;
 }
 
 .footerLinks a:hover {
-    color: #fa9609;
-}
-
-/* .page-footer {
-    background-color: transparent;
-    color: #333 !important;
-    font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-#footerLink li{
-    display: inline-block;
-}
-
-.footerLinks {
-    margin-left: 30px;
-    font-size: 30px;
-}
-
-.footerLinks a {
-    color: #a7b018;
-    text-align: center;
-}
-
-.footerLinks a:hover {
-    color: #fa9609;
+    color: #fff;
 }
 
 .footer-copyright {
-    background-color: #fff !important;
-    border-top: 2px solid #e5e5e5;
-    color: #333 !important;
+    border-top: 1px solid #a2a2a2;
+}
+
+.footer-copyright #left, .footer-copyright #right {
+    float: left;
+    font-weight: lighter;
     text-align: center;
-} */
+    width: 50%;
+}
 
-/* @media (min-width: 768px) {
-    #loginModal {
-        width: 
-    }
+.footer-copyright #right h5 {
+    display: none;
+}
 
-    #signupForm {
-        border-radius: 5px;
-        width: 85%;
-    }
-} */
+
 @media (max-width: 768px) {
     .advert-header {
         border: 2px solid #e1e1e1 !important;
@@ -396,5 +371,19 @@ form .progress {
     .page-footer, .page-footer .footer-link-list li {
         text-align: center;
         list-style-type: none !important;
+    }
+
+    .footer-copyright {
+        border: none;
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    .footer-copyright #left, .footer-copyright #right {
+        width: 100%;
+    }
+    
+    .footer-copyright #right h5 {
+        display: block;
     }
 }
