--- a/views/sell.hbs
+++ b/views/sell.hbs
@@ -15,7 +15,7 @@
             <div class="col l8 s12">
                 <h2 class="sell-header">Grow your business online</h2>
                 <p>Reach millions of buyers in every state in Nigeria easily, get your business on Zubis Mart today!</p>
-                <a href="/users/register" class="btn sell-register-button">Register Now</a>
+                <a href="#loginModal" class="btn sell-register-button modal-trigger">Register Now</a>
             </div>
         </div>
         <div id="why-sell">
@@ -66,7 +66,7 @@
         <div id="sell-bottom" class="row">
             <div id="earn-div" class="col s12 l6 ">
                 <h3 class="sell-header">Earn Money, Hassle Free</h3>
-                <a class="btn waves-effect waves-dark sell-register-button">Register Now</a>
+                <a href="#loginModal" class="btn waves-effect waves-dark sell-register-button modal-trigger">Register Now</a>
             </div>
             <div class="col s12 l6">
                 <img class="responsive-img" id="tab-pc" src="/img/tabs-pc.png" alt="Tablet PCs">
