--- a/public/css/adminDashboard.css
+++ b/public/css/adminDashboard.css
@@ -40,8 +40,6 @@ body {
 
 #numberOfUsers {
     background-color: #34b7f1;
-    /* background-color: #e6e6e6; */
-    /* color: #555; */
     color: #fff;
     padding: 5px;
     position: relative;
@@ -63,6 +61,7 @@ body {
 
 table {
     box-shadow: 0px 0px 5px #e6e6e6;
+    margin-bottom: 40px;
     margin-top: 40px;
     font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
