--- a/public/css/style.css
+++ b/public/css/style.css
@@ -140,6 +140,12 @@ form .progress {
     min-height: 18px;
 }
 
+.password-error-message {
+    /* color: rgba(204, 75, 55, 0.8); */
+    color: #fff;
+    background-color: rgba(204, 75, 55);
+}
+
 .btn {
     font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
