--- a/views/index.hbs
+++ b/views/index.hbs
@@ -98,7 +98,7 @@
                 <div class="row">
                     <div class="col s12 m8 l8">
                         <h3><span>Exclusive</span> Launch Day Discount</h3>
-                        <p>about <span>45<span>%</span></span> OFF!</p>
+                        <p>up to <span>45<span>%</span></span> OFF!</p>
                         <p>for the first <span>20</span> Subscribers</p>  
                     </div>
                     <div class="col s12 m4 l4">
