--- a/views/ushering.hbs
+++ b/views/ushering.hbs
@@ -19,9 +19,9 @@
                                     <span class="mdi mdi-human-male-male service-icon"></span>
                                 </div>
                                 <div class="content service">
-                                    <p>Seller: <span class="service-info">{{this.userName}}</span></p>
-                                    <p>Contact: <span class="service-info">{{this.phone}}</span></p>
-                                    <p>Description: <span class="service-info">{{this.description}}</span></p>
+                                    <p class="seller-label">Seller: <span class="service-info">{{this.userName}}</span></p>
+                                    <p class="seller-label">Contact: <span class="service-info">{{this.phone}}</span></p>
+                                    <p class="seller-label">Description: <span class="service-info">{{this.description}}</span></p>
                                 </div>
                             </div>
                         </div>
