--- a/public/css/products.css
+++ b/public/css/products.css
@@ -37,13 +37,8 @@ a.breadcrumb:hover {
     color: #333;
 }
 
-.product {
-    font-family: 'Montserrat', Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: bold;
-}
-
-.product-info {
-    font-weight: 100;
+.seller-label {
+    font-weight: bolder;
 }
 
 .no-product {
