--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,17 +35,92 @@ body {
 #logo {
     max-width: 155px !important;
     max-height: 300px !important;
-    /* position: relative;
-    top: 3px; */
 }
 
 nav {
     background-color: #a7b018;
-    /* box-shadow: none; */
 }
 
 nav .nav-wrapper {
     padding: 0 40px;
+}
+
+#searchForm {
+    display: inline-block;
+    position: relative ; 
+    left: 12rem !important;
+}
+
+.searchDiv {
+    position: relative;
+    display: inline-block !important;
+}
+
+#search, #mobileSearch {
+    background-color: #f1f1f1;
+    -webkit-border-top-left-radius: 5px;
+    border-top-left-radius: 5px;
+    -webkit-border-bottom-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-bottom: none !important;
+    font-family: 'Rajdhani', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding-left: 10px !important;
+    padding-right: 10px !important;
+    height: 2.5rem;
+    width: 21rem;
+}
+
+#search:focus, #mobileSearch:focus {
+    background-color: #fff;
+} 
+
+#mobileSearch {
+    margin-left: 1rem !important;
+    width: 70%;
+}
+
+#searchButton {
+    -webkit-box-shadow: none !important;
+    background-color: #ffa500 !important;
+    -webkit-border-top-right-radius: 5px;
+    border-top-right-radius: 5px;
+    -webkit-border-bottom-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    -webkit-box-shadow: none !important;
+    box-shadow: none !important;
+    position: absolute;
+    height: 40px;
+    top: -1px;
+    left: 324px;
+    max-width: 40px;
+    text-align: center;
+}
+
+#mobileSearchButton {
+    -webkit-box-shadow: none !important;
+    background-color: #ffa500 !important;
+    -webkit-border-top-right-radius: 5px;
+    border-top-right-radius: 5px;
+    -webkit-border-bottom-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    -webkit-box-shadow: none !important;
+    box-shadow: none !important;
+    position: absolute;
+    height: 37px;
+    top: -1px;
+    left: 190px;
+    max-width: 40px;
+    text-align: center;
+}
+
+#searchButton:hover, #mobileSearchButton:hover {
+    background-color: #fa9609 !important;
+    cursor: pointer;
+}
+
+#searchButton span {
+    position: relative;
+    top: -10px;
 }
 
 nav ul a {
@@ -265,6 +340,45 @@ form .progress {
     background-color: #fa9609;
 }
 
+.price {
+    color: #555;
+    cursor: default;
+    font-family: 'Rajdhani', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 18px !important;
+    font-style: unset !important;
+    font-weight: bold;
+}
+
+.product, .service {
+    color: #555;
+    cursor: default;
+    font-family: 'Rajdhani', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.seller-label {
+    font-weight: bolder;
+}
+
+.product-info, .service-info {
+    font-weight: lighter;
+}
+
+.no-items {
+    background: #fff;
+    color: #666;
+    font-family: 'Rajdhani', Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: lighter;
+    padding: 2rem;
+    text-align: center;
+}
+
+.sub-header {
+    color: #333;
+    font-family: 'Rajdhani', Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bold;
+    text-align: center;
+}
+
 #top-arrow {
     background-color: #a7b018;
 }
@@ -338,8 +452,25 @@ form .progress {
     display: none;
 }
 
+@media (max-width: 1024px) {
+    #searchForm {
+        display: inline-block;
+        position: absolute !important; 
+        top: 100px !important;
+        left: 35% !important;
+        z-index: 3;
+    }
+
+    #searchButton {
+        height: 38px;
+    }
+}
+
 
 @media (max-width: 768px) {
+    #searchForm {
+        display: none;
+    }
     .advert-header {
         border: 2px solid #e1e1e1 !important;
     }
