--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,9 +1,15 @@
 <header id="page-top">
     <div id="navbar" class="bavbar-fixed">
-        <nav>
+        <nav class="nav-extended">
             <div class="nav-wrapper">
                 <a href="/" class="brand-logo"><img id="logo" src="/img/logo.jpg" alt="Zubis Mart Logo"></a>
                 <a href="#" class="sidenav-trigger" data-target="mobile-menu"><i id="menu-icon" class="mdi mdi-menu"></i></a>
+                <form id="searchForm" autocomplete="off" method="POST" action="/search">
+                    <div class="input-field searchDiv">
+                        <input id="search" type="search" name="search" placeholder="Search for products and services . . ." value="{{searchBox}}" required>
+                        <button id="searchButton" type="submit" style="color: #fff; background-color: green;"><span class="mdi mdi-magnify"></span></button>
+                    </div>
+                </form>
                 <ul id="store-dropdown" class="dropdown-content">
                     <li><a href="/products/phonesAndElectronics">Phones &amp; Electronics</a></li>
                     <li class="divider"></li>
@@ -88,6 +94,14 @@
             </div>
         </nav>
         <ul id="mobile-menu" class="sidenav">
+            <li>
+                <form id="mobileSearchForm" autocomplete="off" method="POST" action="/search">
+                    <div class="input-field mobileSearchDiv">
+                        <input id="mobileSearch" type="search" name="search" placeholder="Search here. . ." value="{{searchBox}}" required>
+                        <button id="mobileSearchButton" type="submit" style="color: #fff; background-color: green;"><span class="mdi mdi-magnify"></span></button>
+                    </div>
+                </form>
+            </li>
             {{#if user}}
                 <li class="active"><a href="/users/{{user._id}}"><i class="mdi mdi-home left"></i>Home</a></li>
                 <li class="store"><a href="#!" class="dropdown-trigger" data-target="mobile-store-dropdown"><i class="mdi mdi-shopping left"></i>Store</a></li>
