--- a/views/phonesAndElectronics.hbs
+++ b/views/phonesAndElectronics.hbs
@@ -23,9 +23,9 @@
                                     <p class="price"><span class="mdi mdi-currency-ngn">{{this.price}}</span></p>
                                 </div>
                                 <div class="card-action product">
-                                    <p>Seller: <span class="product-info">{{this.userName}}</span></p>
-                                    <p>Contact: <span class="product-info">{{this.phone}}</span></p>
-                                    <p>Description: <span class="product-info">{{this.description}}</span></p>
+                                    <p class="seller-label">Seller: <span class="product-info">{{this.userName}}</span></p>
+                                    <p class="seller-label">Contact: <span class="product-info">{{this.phone}}</span></p>
+                                    <p class="seller-label">Description: <span class="product-info">{{this.description}}</span></p>
                                 </div>
                             </div>
                         </div>
