--- a/views/partials/addItemModal.hbs
+++ b/views/partials/addItemModal.hbs
@@ -36,7 +36,7 @@
                 <div class="col s12 input-field">
                     <textarea name="itemDescription" id="itemDescription" class="materialize-textarea" class="validate" maxlength="100"></textarea>
                     <label for="itemDescription">Short description here...</label>
-                    <span class="helper-text" data-error="Please enter a description for your item">Characters <span id="itemDescriptionCharacters">0</span>/100</span>
+                    <span class="helper-text" data-error="Please enter a description for your item">Characters <span id="itemDescriptionCharacters">0</span>/100. Description will be visible to everyone.</span>
                 </div>
             </div>
             <div class="row login-row">
