--- a/views/partials/addServiceModal.hbs
+++ b/views/partials/addServiceModal.hbs
@@ -29,7 +29,7 @@
                 <div class="col s12 input-field">
                     <textarea name="serviceDescription" id="serviceDescription" class="materialize-textarea" class="validate" maxlength="160"></textarea>
                     <label for="serviceDescription">Short description here...</label>
-                    <span class="helper-text" data-error="Invalid Description!">Characters <span id="serviceDescriptionCharacters">0</span>/160</span>
+                    <span class="helper-text" data-error="Invalid Description!">Characters <span id="serviceDescriptionCharacters">0</span>/160. Description will be visible to everyone.</span>
                 </div>
             </div>
             <div class="row login-row">
