--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -37,7 +37,7 @@
     </div>
     <div class="footer-copyright">
         <div id="left">
-            <p style="color: #a2a2a2">&copy; 2018 Copyright Zubis Mart - Developed by Barman</p>
+            <p style="color: #a2a2a2">&copy; 2018 Copyright Zubis Mart - Developed by <span class="myLink"><a href="https://www.domstech.com" target="_blank">Barman</a></span></p>
         </div>
         <div id="right">
             <h5>Connect</h5>
