--- a/views/adminDashboard.hbs
+++ b/views/adminDashboard.hbs
@@ -74,7 +74,7 @@
                             <td class="username">{{this.firstName}} {{this.lastName}}</td>
                             <td>{{this.email}}</td>
                             <td>{{this.phone}}</td>
-                            <td>{{this.createdAt}}</td>
+                            <td>{{formatJoinedDate this.createdAt}}</td>
                             <td>{{lastLogin this.lastLogin}}</td>
                             <td>{{lastPaid this.lastPaid}}</td>
                             <td>
