--- a/views/searchResults.hbs
+++ b/views/searchResults.hbs
@@ -14,7 +14,7 @@
                                         <span class="card-title">{{this.name}}</span>
                                     </div>
                                     <div class="card-content">
-                                        <p class="price"><span class="mdi mdi-currency-ngn">{{this.price}}</span></p>
+                                        <p class="price"><span class="mdi mdi-currency-ngn">{{formatPrice this.price}}</span></p>
                                     </div>
                                     <div class="card-action product">
                                         <p class="seller-label">Seller: <span class="product-info">{{this.userName}}</span></p>
