--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -1,11 +1,12 @@
 #main-section {
     height: auto;
     width: 100%;
+    margin-bottom: 0 !important;
 }
 
 #left-section {
     background-color: #fff;
-    height: 100vh;
+    height: auto;
     padding: 15px;
 }
 
@@ -17,6 +18,41 @@
 
 #username {
     font-family: 'Dosis', sans-serif;
+}
+
+#subscriptionSection {
+    background-color: #fff3d9;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    font-family: 'Rajdhani', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-top: 2rem;
+    padding: 0 1rem 1rem 1rem;
+}
+
+#subscriptionSection span, #accountSection span {
+    color: #666;
+    font-size: 2rem;
+    text-align: right;
+    width: 100%;
+}
+
+#subscriptionSection span:hover, #accountSection span:hover {
+    color: #f00;
+    cursor: pointer;
+}
+
+#accountSection {
+    background-color: #e1faea;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    font-family: 'Rajdhani', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+    padding: 0 1rem 1rem 1rem;
+}
+
+#accountSection p {
+    margin: 0.5rem 0 0 0.5rem !important;
 }
 
 #right-section {
