--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -14,9 +14,19 @@
                 <li class="collection-item"><a class="modal-trigger" data-target="changePasswordModal">Change Password</a></li>
                 <li class="collection-item"><a class="modal-trigger" data-target="removeAccountModal">Remove My Account</a></li>
             </ul>
+            <div id="subscriptionSection" class="notification-message">
+                <span class="close-message" style="float: right;">&times;</span>
+                <p>Products and Services you add will not be visible to other people Until you the monthly pay subscription fee</p>
+            </div>
+            <div id="accountSection" class="notification-message">
+                <span class="close-message" style="float: right;">&times;</span>
+                <p><strong style="font-weight: bolder;">Account Name:</strong> Lorem, ipsum dolor.</p>
+                <p><strong style="font-weight: bolder;">Account Number:</strong> 0123456789</p>
+                <p><strong style="font-weight: bolder;">Bank:</strong> 0123456789</p>
+            </div>
         </div>
         <div id="right-section" class="col s12 l9">
-            <h5><i id="dashboard-icon" class="mdi mdi-view-dashboard"></i>&nbsp;Dashboard</h5>
+            <h5><span id="dashboard-icon" class="mdi mdi-view-dashboard"></span>&nbsp;Dashboard</h5>
             <div class="row">
                 <div class="col s12 l6">
                     <div id="card1" class="card-panel hoverable">
@@ -29,7 +39,7 @@
                 <div class="col s12 l6">
                     <div id="card2" class="card-panel hoverable">
                         <span class="mdi mdi-database card-icon"></span>
-                        <h5>Total Profit</h5>
+                        <h5>Total Sales</h5>
                         <h6><span class="mdi mdi-currency-ngn left"></span>0</h6>
                     </div>
                 </div>
