--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -2,14 +2,6 @@
     <div class="section">
         <div class="row">
             <div class="col s12 m6 l3">
-                <h5>Contact</h5>
-                <ul class="footer-link-list">
-                    <li>Business Address should go here</li>
-                    <li>09026425337</li>
-                    <li>contact@zubismart.com</li>
-                </ul>
-            </div>
-            <div class="col s12 m6 l3">
                 <h5>Support</h5>
                 <ul class="footer-link-list">
                     <li><a href="#">Terms of Use</a></li>
@@ -23,7 +15,13 @@
                     <li>Online Sales</li>
                     <li>Professional Services</li>
                     <li>Advert Placement</li>
-                    <li>Lorem, ipsum.</li>
+                </ul>
+            </div>
+            <div class="col s12 m6 l3">
+                <h5>Contact</h5>
+                <ul class="footer-link-list">
+                    <li>University of Nigeria Nsukka, Enugu.</li>
+                    <li>contact@zubismart.com</li>
                 </ul>
             </div>
             <div class="col s12 m6 l3">
@@ -42,8 +40,8 @@
         <div id="right">
             <h5>Connect</h5>
             <ul id="footerLink">
-                <li class="footerLinks"><a href="#!"><i class="mdi mdi-facebook"></i></a></li>
-                <li class="footerLinks"><a href="#!"><i class="mdi mdi-twitter"></i></a></li>
+                <li class="footerLinks"><a href="https://web.facebook.com/Zubismartonline-607558123008426/" target="_blank "><i class="mdi mdi-facebook"></i></a></li>
+                <li class="footerLinks"><a href="#!"><i class="mdi mdi-whatsapp"></i></a></li>
                 <li class="footerLinks"><a href="#!"><i class="mdi mdi-instagram"></i></a></li>
             </ul>
         </div>
