Added Terms of Use

--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -4,9 +4,9 @@
             <div class="col s12 m6 l3">
                 <h5>Support</h5>
                 <ul class="footer-link-list">
-                    <li><a href="#">Terms of Use</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Return Policy</a></li>
+                    <li><a href="/termsOfUse">Terms of Use</a></li>
+                    <li><a href="/privacyPolicy">Privacy Policy</a></li>
+                    <li><a href="/returnPolicy">Return Policy</a></li>
                 </ul>
             </div>
             <div class="col s12 m6 l3">
