Added Stock Computation

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -1,3 +1,13 @@
+#paymentMessageSuccess {
+    padding: 1rem;
+    text-align: center;
+}
+
+.paymentMessageClose:hover {
+    color: #d32f2f;
+    cursor: pointer;
+}
+
 #main-section {
     height: auto;
     width: 100%;
