--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="Zubismart is an online platform for peopple to buy and sell goods and services. Our goal is to make life easier by bringing your required needs to your doorstep.">
+    <meta name="description" content="Zubismart is an online platform for peopple to buy and sell goods and services. Our goal is to make life easier by bringing your required needs to your doorstep. Developed by Uzoanya Dominic">
     <script src="/js/jquery-3.3.1.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Dosis|Montserrat|Rajdhani|Roboto" rel="stylesheet">
     <link rel="stylesheet" href="/css/materialdesignicons.min.css">
@@ -21,6 +21,11 @@
         
     {{#if failure_message}}
         <p id="failureText" class="center messages">{{failure_message}}<i class="right mdi mdi-close mdi-18px failureClose"></i></p>    
+    {{/if}}
+    {{#if paymentMessageSuccess}}
+        <div id="paymentMessageSuccess" class="success-message">
+            <p>Acount Activation Successful...<span class="right mdi mdi-close mdi-18px paymentMessageClose"></span></p>
+        </div>
     {{/if}}
     {{{body}}}
     <script src="/js/materialize.min.js"></script>
