--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -35,14 +35,14 @@
     </div>
     <div class="footer-copyright">
         <div id="left">
-            <p style="color: #a2a2a2">&copy; 2018 Copyright Zubis Mart - Developed by <span class="myLink"><a href="https://www.domstech.com" target="_blank">Barman</a></span></p>
+            <p style="color: #a2a2a2">&copy; 2019 Copyright Zubis Mart - Developed by <span class="myLink"><a href="https://www.domstech.com" target="_blank">Barman</a></span></p>
         </div>
         <div id="right">
             <h5>Connect</h5>
             <ul id="footerLink">
                 <li class="footerLinks"><a href="https://web.facebook.com/Zubismartonline-607558123008426/" target="_blank "><i class="mdi mdi-facebook"></i></a></li>
-                <li class="footerLinks"><a href="#!"><i class="mdi mdi-whatsapp"></i></a></li>
-                <li class="footerLinks"><a href="#!"><i class="mdi mdi-instagram"></i></a></li>
+                <li class="footerLinks"><a href="#!"><span class="mdi mdi-whatsapp"></span></a></li>
+                <li class="footerLinks"><a href="#!"><span class="mdi mdi-instagram"></span></a></li>
             </ul>
         </div>
     </div>
